# notra-omr

./: .gitignore  .pre-commit-config.yaml  MILESTONE_1.md  Makefile  README.md  pyproject.toml
artifacts/executive/: ONE_MINUTE.md  README.md
docs/architecture/: cello_deterministic_layout.md  duration_evidence.md  notehead_iteration.md  recovery_notes.md
notra/: __init__.py
notra/cli/: __init__.py  convert.py  diff.py  inspect.py  main.py  recognize.py  render.py  validate.py
notra/core/: errors.py  geometry.py  ids.py  provenance.py
notra/exporters/: json_ir.py  musicxml.py  tokens.py
notra/ir/: articulations.py  barline.py  clef.py  diff.py  dynamics.py  key.py  measure.py  note.py  rest.py  schema.py  score.py  serialize.py  time.py  tokens.py  validate.py
notra/layout/: annotations.py  beam_detector.py  dots.py  measure.py  page.py  staff.py  stem_detector.py  symbol.py  system.py  time_signature.py  validate.py
notra/pipeline/: artifacts.py  config.py  recognizer.py  run.py  stages.py  structural_classifier.py
notra/semantics/: __init__.py  duration_evidence.py  rhythm_solver.py  supervised_duration.py
notra/vision/: __init__.py  models.py  notehead_measure_policy.py  notehead_policy.py  notehead_pseudolabels.py  (+3 more)
scripts/: debug_leak_free_measures.py  eval_cello_duration_policy.py  eval_cello_layout_metrics.py  eval_cello_stage_metrics.py  eval_cello_supervised_duration_selection.py  generate_notehead_pseudolabels.py  generate_segmentation_pseudolabels.py  train_notehead_threshold_policy.py
viewer/: README.md  app.js  index.html  styles.css
(+74 files in other folders)
